src/core-crm/objects/Pure_Project__c/Pure_Project__c.object-meta.xml
<CustomObject>
    <description>The Pure Project object stored data integrated from the QUT’s PURE system. PURE is QUT’s Research Project/Information Management System.</description>
    <label>Pure Project</label>
    <nameField>
        <label>Pure Project ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pure Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>