src/core-crm/objects/Pure_Project__c/fields/Engagement__c.field-meta.xml
<CustomField>
    <fullName>Engagement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to related Engagement.</description>
    <label>Engagement</label>
    <referenceTo>Engagement__c</referenceTo>
    <relationshipLabel>Pure Projects</relationshipLabel>
    <relationshipName>Pure_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>