src/core-crm/objects/Pure_Project__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to related Opportunity.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pure Projects</relationshipLabel>
    <relationshipName>Pure_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>