src/core-crm/objects/Pure_Project__c/fields/Pure_Chief_Investigator_Name__c.field-meta.xml
<CustomField>
    <fullName>Pure_Chief_Investigator_Name__c</fullName>
    <description>The name of the Chief Investigator linked to the PURE Project.</description>
    <label>Pure Chief Investigator Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>