src/core-crm/objects/Pure_Project__c/fields/Pure_CLMS_Contract_Id__c.field-meta.xml
<CustomField>
    <fullName>Pure_CLMS_Contract_Id__c</fullName>
    <description>PURE CLMS Contract Id.</description>
    <label>Pure CLMS Contract ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>