src/core-crm/objects/Pure_Project__c/fields/Pure_CLMS_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Pure_CLMS_Contract_Status__c</fullName>
    <description>PURE CLMS Contract Status.</description>
    <label>Pure CLMS Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract Negotiation</fullName>
            </value>
            <value>
                <fullName>Internally Approved</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>