src/core-crm/objects/Pure_Project__c/fields/Pure_Project_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pure_Project_Amount__c</fullName>
    <description>PURE Project Expected Revenue Amount.</description>
    <label>Pure Project Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>