src/core-crm/objects/Pure_Project__c/fields/Pure_Project_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Pure_Project_End_Date__c</fullName>
    <description>PURE Project End Date.</description>
    <label>Pure Project End Date</label>
    <type>Date</type>
</CustomField>