src/core-crm/objects/Pure_Project__c/fields/Pure_Project_Finance_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Pure_Project_Finance_Account_Code__c</fullName>
    <description>PURE Finance Account Code (from QUT Finance System) related to the Project.</description>
    <label>Pure Project Finance Account Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>