src/core-crm/objects/Pure_Project__c/fields/Pure_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Pure_Project_Name__c</fullName>
    <description>PURE Project Name.</description>
    <label>Pure Project Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>