src/core-crm/objects/Pure_Project__c/fields/Pure_Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Pure_Project_Start_Date__c</fullName>
    <description>PURE Project Start Date.</description>
    <label>Pure Project Start Date</label>
    <type>Date</type>
</CustomField>